# ros2_ws_2

./: .ros_source  README  mav.parm  mav_0_1.parm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ardupilot_sitl_gazebo_plugin/share/ardupilot_sitl_gazebo_plugin/: package.bash  package.zsh
install/libmavconn/include/mavconn/: mavlink_dialect.hpp
install/libmavconn/share/libmavconn/: local_setup.sh  package.sh
install/mavlink/share/mavlink/: package.bash  package.sh  package.zsh
install/mavros/lib/mavros/: mavros_node
install/mavros/share/mavros/: local_setup.sh  package.sh
install/mavros_extras/lib/mavros_extras/: servo_state_publisher
install/mavros_extras/share/mavros_extras/: local_setup.sh  package.sh
install/mavros_msgs/share/mavros_msgs/: package.sh
log/: latest_build  latest_test  latest_test-result
src/VRX_Foxy/robotX_2022/: CMakeLists.txt  setup.py
src/VRX_Foxy/robotX_2022/launch/: UAV_keydrive.launch  drone_control_launch.py  empty_world_wamv.launch  emptyworld_platformed_drone_wamv_qr.launch  grass_replenish_platform.launch  grass_replenish_platform.xml  iris_double_world.launch  only_platform_empty.launch  only_wamv_qr_empty.launch  simple_launch.py  visualworld_platformed_drone_wamv_qr.launch  wamv_basic_commands.launch
src/VRX_Foxy/robotX_2022/materials/scripts/: gazebo.material
src/VRX_Foxy/robotX_2022/models/QR_wamv/: model.config  model_og.sdf
src/VRX_Foxy/robotX_2022/models/camera/: model-1_5.sdf  model.config
src/VRX_Foxy/robotX_2022/models/camera_g/: model-1_5.sdf
src/VRX_Foxy/robotX_2022/models/flat_ocean_waves/: model.config  model.sdf  model.xacro
src/VRX_Foxy/robotX_2022/models/gimbal_small_2d/: model.config  model.sdf
src/VRX_Foxy/robotX_2022/models/iris_with_standoffs/: model.sdf
src/VRX_Foxy/robotX_2022/models/landing_pad/meshes/: Landing_Pad_Mesh.blend  Landing_Pad_Mesh.dae
src/VRX_Foxy/robotX_2022/models/robotx_iris_with_ardupilot/: model.config
src/VRX_Foxy/robotX_2022/models/sydney_regatta/: model.sdf
src/VRX_Foxy/robotX_2022/nodes/: boat_twist.py  fake_takeoff.py  spare_node.py  wamv_dk_functions.py
src/VRX_Foxy/robotX_2022/scripts/: IRL_double_precision_landing.py  UAV_Replenishment.py  boatLaunch.py  dict_dk_functions.py  dk_functions.py  gaz_precision_landing.py  gazb_boat_double_precision_landing.py  mav.parm  mav.tlog  mav.tlog.raw  mav_0_1.parm  precision_landing.py  quickLaunch.py  ros2_img_functs  ros2_img_functs.py
src/VRX_Foxy/robotX_2022/scripts/Jeffscripts/: dk_functions.py  dk_functions_old.py  out.ogv  precision_landing.py  precision_landing_old.py  search_and_report_task.py  search_and_report_task_aruco.py
src/VRX_Foxy/robotX_2022/scripts_ROS1/: IRL_dict_dk_functions.py  dk_functions_grant.py  gaz2_double_precision_landing.py  tempZone.py
src/VRX_Foxy/robotX_2022/src/: ArduCopterIRLockPlugin.cc  ArduPilotPlugin.cc
src/VRX_Foxy/robotX_2022/worlds/: 2022_qualifying_task.world  empty_regatta.world  empty_regatta_wplatform.world  flat_ocean.world  flat_ocean_import.world  flat_ocean_imports.world  flat_ocean_replenish_marker_platformed.world  flat_ocean_wplatform.world  grass_2_arucos.world
src/ros2_robotx/: setup.cfg  setup.py
src/ros2_robotx/include/: dictonary_gen.py  dk_functs_dict.py
src/ros2_robotx/launch/: just_drone_launch.py  land_wamv_launch.py
src/ros2_robotx/ros2_robotx/: drone_control.py  wamv_sim.py
src/ros2_robotx/worlds/: grass_replenish_marker.world
(+697 files in other folders)
